refatoracao e ajustes geral